@@ -3,7 +3,7 @@ __   _____ _ __ ___(_) ___  _ __   |___ / |___ \| || |
 \ \ / / _ \ '__/ __| |/ _ \| '_ \    |_ \   __) | || |_
  \ V /  __/ |  \__ \ | (_) | | | |  ___) | / __/|__   _|
   \_/ \___|_|  |___/_|\___/|_| |_| |____(_)_____|  |_|
-               (not released yet)
+               October 9. 2019
 
 The Clean Disk Release.
 
